fix z-index of the pic in home.html

--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -16,6 +16,7 @@ main h2{
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 1;
 }
 /* new article section */
 .new-article a{
