--- a/src/main/resources/static/styles/navbar-footer.css
+++ b/src/main/resources/static/styles/navbar-footer.css
@@ -21,6 +21,7 @@ body{
     color: #142850;
     height: 7vh;
     width: 100%;
+    z-index: 3;
 }
 .logo{
     display: flex;
